resources/launcher/css/launcher.css
/**
 * Copyright (c) 2011 ~ 2012 Deepin, Inc.
 *               2011 ~ 2012 snyh
 *
 * Author:      snyh <snyh@snyh.org>
 * Maintainer:  snyh <snyh@snyh.org>
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, see <http://www.gnu.org/licenses/>.
 **/
@import url("../../common/css/animation.css");
body {
    -webkit-user-select: none;
    background: rgba(0, 0, 0, 0.15);
    color: white;
    overflow-y: hidden;
}

.close {
    background: url("../img/btn_close0.png");
    cursor: pointer;
    position: fixed;
    width: 30px;
    height: 30px;

    top: 20px;
    right: 10px;
    color: red;
}

.close_hover {
    background: url("../img/btn_close.png");
    cursor: pointer;
    position: fixed;
    width: 30px;
    height: 30px;

    top: 20px;
    right: 10px;
    color: red;
}

#search {
    height: 50px;
    padding-bottom: 10px;
    text-align: center;
}

#s_box {
    margin: 23px auto;
    border: 1px solid #01a6e8;
    font-size: 14px;
    height: 24px;
    width: 300px;
    border-radius: 5px;
}
#s_box:hover {
    margin: 22px;
    border: 2px solid #01a6e8;
    box-shadow: 0px 0px 16px #01a6e8;
}

#s_box:hover::-webkit-input-placeholder{
    color: #ffffff;
}

#s_box::-webkit-search-decoration {
}
#s_box::-webkit-search-results-button {
    position: relative;
    left: 280px;
}

#container {
    display: -webkit-box;
    width: 100%;

    position:absolute;
    top: 70px;
    bottom: 30px;
}

#category {
    margin-top: 25px;
    min-width: 180px;
}

#category:lang(zh) {
    max-width: 180px;
    min-width: 180px;
}

#category:lang(en) {
    max-width: 220px;
    min-width: 220px;
}

.category_name {
    border: rgba(255,255,255, 0) 1px solid;
    margin: 10px 0px 10px 15px;

    text-indent: 15px;
    padding: 10px 0px 5px 15px;

    cursor: pointer;
    line-height: 30px;
    font-size: 22px;
    text-shadow: 0px 1px 2px rgba(0,0,0,0.4), 0px 1px 2px rgba(0,0,0,0.4), 1px 0px 2px rgba(0,0,0,0.4), -0px 0px 2px rgba(0,0,0,0.4);
    border-radius: 5px;
    text-transform: capitalize;
}

.category_selected {
    background: rgba(255, 255, 255, 0.1);
    border: rgba(255,255,255, 0.5) 1px solid;
    box-shadow: inset 0 0 5px rgba(255, 255, 255, 0.3);
}
#grid {
    -webkit-box-flex: 1;
    width: 100%;
    overflow-y: scroll;
    margin-right: 20px;
    margin-bottom:30px;
}

.item {
    position: relative;
    margin: 10px;
    cursor: default;
    float: left;
    width: 80px;
    height: 74px;
    padding: 10px;
    padding-bottom: 2em;
    text-align: center;
    border: 1px rgba(255, 255, 255, 0.0) solid;
}
.item_selected {
    background: rgba(0, 183, 238, 0.4);
    border: 1px rgba(255, 255, 255, 0.4) solid;
    border-radius: 2px;
}

.item_name {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;

    text-shadow: 0px 1px 2px rgba(0,0,0,0.8), 0px 1px 2px rgba(0,0,0,0.8), 1px 0px 2px rgba(0,0,0,0.8), -0px 0px 2px rgba(0,0,0,0.8);

    overflow: hidden;
    text-overflow: ellipsis;
}

.item:hover {
    background: rgba(0, 183, 238, 0.2);
    border: 1px rgba(255, 255, 255, 0.2) solid;
    border-radius: 2px;
    /*-webkit-transform: rotate(-7deg);*/
}

.item img {
    border-radius: 6px;
    -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.7, transparent), to(rgba(0,0,0,0.4)));
    margin-bottom: 10px;
    max-height: 48px;
    max-width: 48px;
}

.square_img {
    width: 48px;
    height: 48px;
}

.hbar_img {
    width: 48px;
}
.vbar_img {
    height: 48px;
}

.item_comment {
    width: 80px;
    color: transparent;
}

::-webkit-scrollbar {
    width: 8px;
}
::-webkit-scrollbar-track {
    /*box-shadow: inset 0 0 6px rgba(0, 0, 0, 1);*/
    /*border-radius: 8px;*/
    background: rgba(0, 0, 0, 0.1);
}
::-webkit-scrollbar-thumb {
    /*border-radius: 10px;*/
    background: rgba(255, 255, 255, .6);
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
}

::-webkit-scrollbar-thumb:window-inactive {
    background: rgba(255, 255, 255, 0.4);
}


@-webkit-keyframes tcursor {
    0% { opacity: 0.0;}
    100% { opacity: 1; }
}
.cursor {
    display: none;
    position: fixed;
    left: 600px;
    top: 29px;
    color: black;
    width: 20px;
    height: 20px;
    -webkit-animation: tcursor;
    -webkit-animation-duration: 0.8s;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-timing-function: linear;
}

.hide_icon img {
    opacity: 0.3;
}

.autostart_flag {
    position: absolute;
    top: 39px;
    left: 28px;
}

